--- a/src/Persona/PersonaFRM.form
+++ b/src/Persona/PersonaFRM.form
@@ -24,45 +24,43 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
-                              <Component id="lblid" min="-2" pref="45" max="-2" attributes="0"/>
-                          </Group>
-                          <Component id="lblemail" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lbldireccion" min="-2" max="-2" attributes="0"/>
-                          <Component id="lbltelefono" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblidentificacion" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblnombre" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblapellido" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="txtidentificacion" min="-2" pref="136" max="-2" attributes="0"/>
-                          <Component id="txtid" min="-2" pref="136" max="-2" attributes="0"/>
-                          <Component id="txtnombre" alignment="1" min="-2" pref="136" max="-2" attributes="0"/>
-                          <Component id="txtapellido" alignment="1" min="-2" pref="136" max="-2" attributes="0"/>
-                          <Component id="txtdireccion" alignment="1" min="-2" pref="136" max="-2" attributes="0"/>
-                          <Component id="txttelefono" alignment="1" min="-2" pref="136" max="-2" attributes="0"/>
-                          <Component id="txtemail" alignment="1" min="-2" pref="136" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace type="separate" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
+                      <Component id="lblid" min="-2" pref="45" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="94" max="-2" attributes="0"/>
-                      <Component id="btnGuardar" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="btnConsultar" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
-                      <Component id="btnEliminar" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="lblemail" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="lbldireccion" min="-2" max="-2" attributes="0"/>
+                  <Component id="lbltelefono" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblidentificacion" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblnombre" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblapellido" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="txtidentificacion" min="-2" pref="136" max="-2" attributes="0"/>
+                  <Component id="txtid" min="-2" pref="136" max="-2" attributes="0"/>
+                  <Component id="txtnombre" alignment="1" min="-2" pref="136" max="-2" attributes="0"/>
+                  <Component id="txtapellido" alignment="1" min="-2" pref="136" max="-2" attributes="0"/>
+                  <Component id="txtdireccion" alignment="1" min="-2" pref="136" max="-2" attributes="0"/>
+                  <Component id="txttelefono" alignment="1" min="-2" pref="136" max="-2" attributes="0"/>
+                  <Component id="txtemail" alignment="1" min="-2" pref="136" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="32767" attributes="0"/>
               <Component id="jScrollPane7" min="-2" pref="344" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="94" max="-2" attributes="0"/>
+              <Component id="btnGuardar" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="btnConsultar" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
+              <Component id="btnEliminar" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+              <Component id="btnSalir" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="503" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -75,7 +73,7 @@
                       <Component id="jScrollPane7" min="-2" pref="245" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
-                  <Group type="102" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="lblid" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="txtid" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -109,11 +107,12 @@
                           <Component id="txtemail" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="lblemail" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="50" max="32767" attributes="0"/>
+                      <EmptySpace pref="103" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="btnGuardar" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnEliminar" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnConsultar" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnSalir" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
                   </Group>
@@ -214,6 +213,14 @@
     <Component class="javax.swing.JTextField" name="txtemail">
     </Component>
     <Component class="javax.swing.JTextField" name="txttelefono">
+    </Component>
+    <Component class="javax.swing.JButton" name="btnSalir">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Salir"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSalirActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
